--- a/styles/style.css
+++ b/styles/style.css
@@ -6,11 +6,12 @@ body {
     height: 500px;
     width: 500px;
     margin: 0 auto;
-    row-gap: 2px;
-    column-gap: 2px;
+    background-color: hsl(22, 97%, 88%);
+    border: thin black solid;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .4);
 }
 .gridItem {
-    background-color: rgba(0, 0, 0, .2);
+    background-color: transparent;
 }
 h1, h2 {
     text-align: center;
@@ -50,4 +51,35 @@ a {
 }
 a:hover {
     text-decoration: underline;
+}
+#buttons {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+.option {
+    background-color: #f2f2f2;
+    background: linear-gradient(180deg,#f5f5f5,#f1f1f1);
+    border: 1px solid #f2f2f2;
+    border-radius: 4px;
+    color: #5F6368;
+    margin: 11px 4px;
+    padding: 0 16px;
+    line-height: 36px;
+    height: 36px;
+    min-width: 54px;
+    text-align: center;
+    font-size: 14px;
+    box-sizing: border-box;
+    font-weight: 600;
+}
+.option:hover {
+    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+    background-image: linear-gradient(180deg,#f8f8f8,#f1f1f1);
+    color: #222;
+    background-color: #f8f8f8;
+    border: 1px solid #c6c6c6;
+}
+.option:active {
+    box-shadow: inset 0 2px 0 rgba(141, 77, 77, 0.15);
 }
