--- a/styles/style.css
+++ b/styles/style.css
@@ -46,11 +46,13 @@ footer {
     padding: 1em;
 }
 a {
-    color: white;
+    color: lightgray;
     text-decoration: none;
+    font-weight: 600;
 }
 a:hover {
     text-decoration: underline;
+    color: white;
 }
 #buttons {
     display: flex;
