--- a/styles/style.css
+++ b/styles/style.css
@@ -34,7 +34,7 @@ main {
     width: 100%;
     background-color: hsl(27, 98%, 83%);
     height: 100vh;
-    padding-top: 10px;
+    padding-top: 20px;
 }
 footer {
     position: fixed;
@@ -56,8 +56,9 @@ a:hover {
 }
 #buttons {
     display: flex;
-    justify-content: center;
-    width: 100%;
+    margin: 0 auto;
+    justify-content: space-evenly;
+    width: 500px;
 }
 .option {
     background-color: #f2f2f2;
@@ -84,4 +85,16 @@ a:hover {
 }
 .option:active {
     box-shadow: inset 0 2px 0 rgba(141, 77, 77, 0.15);
+}
+#color {
+    background-color: #f2f2f2;
+    background: linear-gradient(180deg,#f5f5f5,#f1f1f1);
+    border: 1px solid #f2f2f2;
+    border-radius: 4px;
+    margin: 11px 4px;
+    line-height: 36px;
+    height: 36px;
+    min-width: 54px;
+    text-align: center;
+    box-sizing: border-box;
 }
