--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,12 @@
 body {
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+    font-family: 'Courier New', Courier, monospace ;
 }
 .gridContainer {
     display: grid;
     height: 500px;
     width: 500px;
     margin: 0 auto;
-    background-color: hsl(22, 97%, 88%);
+    background-color: white;
     border: thin black solid;
     box-shadow: 0 0 10px rgba(0, 0, 0, .4);
 }
@@ -19,7 +19,7 @@ h1, h2 {
 }
 h1 {
     font-size: 40px;
-    text-shadow: 0 2px 2px gray;
+    font-weight: bold;
 }
 h2 {
     font-size: 18px;
@@ -27,13 +27,13 @@ h2 {
 }
 header {
     width: 100%;
-    background-color: hsl(118, 18%, 66%);
+    background-color: black;
     padding: 5px;
+    color: white;
+    box-shadow: 0 0 10px black;
 }
 main {
     width: 100%;
-    background-color: hsl(27, 98%, 83%);
-    height: 100vh;
     padding-top: 20px;
 }
 footer {
@@ -41,6 +41,7 @@ footer {
     bottom: 0;
     width: 100%;
     background-color: hsl(198, 17%, 20%);
+    box-shadow: 0 0 6px hsl(198, 17%, 20%);
     text-align: center;
     color: white;
     padding: 1em;
@@ -76,7 +77,7 @@ a:hover {
     box-sizing: border-box;
     font-weight: 600;
 }
-.option:hover {
+.option:hover, #color:hover {
     box-shadow: 0 1px 1px rgba(0,0,0,0.1);
     background-image: linear-gradient(180deg,#f8f8f8,#f1f1f1);
     color: #222;
@@ -85,6 +86,24 @@ a:hover {
 }
 .option:active {
     box-shadow: inset 0 2px 0 rgba(141, 77, 77, 0.15);
+}
+#rainbow {
+    transition: all .2s;
+}
+#rainbow:hover, .active {
+    box-shadow: 0 0 4px rgba(0,0,0,0.8);
+    background-image: linear-gradient(90deg, hsl(0, 98%, 83%) 0%, hsl(63, 98%, 83%) 25%, hsl(127, 98%, 83%) 50%, hsl(191, 98%, 83%) 75%, hsl(255, 98%, 83%) 100%);;
+    color: #222;
+    background-color: #f8f8f8;
+    border: 1px solid #c6c6c6;
+    color: black;
+    transform: scale(1.1);
+}
+.active{
+    box-shadow: inset 0 0 4px rgba(0,0,0,0.3);
+}
+#rainbow:active {
+    box-shadow:inset 0 0 4px rgba(0,0,0,0.3);
 }
 #color {
     background-color: #f2f2f2;
